--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,6 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "tsx src/db/migrate.ts",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -16,15 +20,20 @@
     "@graphql-yoga/node": "^3.9.1",
     "@types/node": "^22.8.1",
     "dotenv": "^16.4.5",
+    "drizzle-orm": "^0.35.3",
     "graphql": "^16.9.0",
     "graphql-yoga": "^5.7.0",
+    "pg": "^8.13.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   },
   "devDependencies": {
+    "@types/pg": "^8.11.10",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.11.0",
+    "drizzle-kit": "^0.26.2",
     "eslint": "^9.13.0",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "tsx": "^4.19.2"
   }
 }
