fix(api): add datetime scalar

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "tsx src/index.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "tsx src/db/migrate.ts",
     "db:push": "drizzle-kit push",
@@ -22,6 +23,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.35.3",
     "graphql": "^16.9.0",
+    "graphql-scalars": "^1.23.0",
     "graphql-yoga": "^5.7.0",
     "pg": "^8.13.1",
     "ts-node-dev": "^2.0.0",
