--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx src/index.ts",
+    "dev": "nodemon --watch src --ext ts,tsx --exec tsx src/index.ts",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "tsx src/db/migrate.ts",
     "db:push": "drizzle-kit push",
@@ -20,12 +20,14 @@
     "@graphql-tools/schema": "^10.0.7",
     "@graphql-yoga/node": "^3.9.1",
     "@types/node": "^22.8.1",
+    "add": "^2.0.6",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.35.3",
     "graphql": "^16.9.0",
     "graphql-scalars": "^1.23.0",
     "graphql-yoga": "^5.7.0",
     "pg": "^8.13.1",
+    "postgres": "^3.4.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   },
@@ -35,6 +37,7 @@
     "@typescript-eslint/parser": "^8.11.0",
     "drizzle-kit": "^0.26.2",
     "eslint": "^9.13.0",
+    "nodemon": "^3.1.7",
     "prettier": "^3.3.3",
     "tsx": "^4.19.2"
   }
