--- a/apps/web/codegen.yml
+++ b/apps/web/codegen.yml
@@ -1,6 +1,6 @@
 schema: "http://localhost:4000/graphql" 
 generates:
-  src/generated/graphql.ts:
+  src/graphql/types/graphql.ts:
     plugins:
       - 'typescript'
       - 'typescript-operations'
