--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,20 +19,25 @@
     "@graphql-tools/merge": "^9.0.8",
     "@graphql-tools/schema": "^10.0.7",
     "@graphql-yoga/node": "^3.9.1",
+    "@graphql-yoga/subscription": "^5.0.1",
     "@types/node": "^22.8.1",
     "add": "^2.0.6",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.35.3",
     "graphql": "^16.9.0",
     "graphql-scalars": "^1.23.0",
+    "graphql-subscriptions": "^2.0.0",
+    "graphql-ws": "^5.16.0",
     "graphql-yoga": "^5.7.0",
     "pg": "^8.13.1",
     "postgres": "^3.4.5",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "ws": "^8.18.0"
   },
   "devDependencies": {
     "@types/pg": "^8.11.10",
+    "@types/ws": "^8.5.12",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.11.0",
     "drizzle-kit": "^0.26.2",
