chore: add a script to generate env vars

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "mosaic-monorepo",
   "private": true,
   "scripts": {
+    "setup-env": "node scripts/setup-env.js",
     "dev": "pnpm --parallel -r run dev",
     "dev:web": "pnpm -F web dev",
     "dev:api": "pnpm -F api dev",
