build: copy the .graphql files to dist

--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -10,11 +10,12 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true,
-    "baseUrl": "src",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["*"]
+      "@/*": ["src/*"]
     }
   },
   "include": ["src/**/*"],
+  "copy": ["src/**/*.graphql"],
   "exclude": ["node_modules", "dist"]
 }
