--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --watch src --ext ts,tsx --exec tsx src/index.ts",
-    "build": "tsx src/index.ts",
+    "build": "tsc && copyfiles -u 1 src/**/*.graphql dist/",
     "start": "node dist/index.js",
     "db:generate": "drizzle-kit generate",
     "db:migrate": "tsx src/db/migrate.ts",
@@ -42,6 +42,7 @@
     "@types/ws": "^8.5.12",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
     "@typescript-eslint/parser": "^8.11.0",
+    "copyfiles": "^2.4.1",
     "drizzle-kit": "^0.26.2",
     "eslint": "^9.13.0",
     "nodemon": "^3.1.7",
