--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -11,7 +11,9 @@
     "db:migrate": "tsx src/db/migrate.ts",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "codegen": "graphql-codegen --config codegen.yml",
+    "codegen:watch": "graphql-codegen --config codegen.yml --watch"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +26,7 @@
     "@graphql-yoga/subscription": "^5.0.1",
     "@types/node": "^22.8.1",
     "add": "^2.0.6",
+    "bcryptjs": "2.4.3",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.35.3",
     "graphql": "^16.9.0",
@@ -31,6 +34,7 @@
     "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.16.0",
     "graphql-yoga": "^5.7.0",
+    "jsonwebtoken": "9.0.2",
     "pg": "^8.13.1",
     "postgres": "^3.4.5",
     "ts-node-dev": "^2.0.0",
@@ -38,6 +42,12 @@
     "ws": "^8.18.0"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.3",
+    "@graphql-codegen/typescript": "^4.1.1",
+    "@graphql-codegen/typescript-resolvers": "^4.4.0",
+    "@parcel/watcher": "^2.4.1",
+    "@types/bcryptjs": "2.4.6",
+    "@types/jsonwebtoken": "9.0.7",
     "@types/pg": "^8.11.10",
     "@types/ws": "^8.5.12",
     "@typescript-eslint/eslint-plugin": "^8.11.0",
