--- a/apps/web/codegen.yml
+++ b/apps/web/codegen.yml
@@ -1,4 +1,4 @@
-schema: "http://localhost:4000/graphql" 
+schema: "../api/src/schemas/types/**/*.graphql"
 generates:
   src/graphql/types/graphql.ts:
     plugins:
