feat(auth): envelope plugin/middleware to protect resolvers

--- a/apps/api/codegen.yml
+++ b/apps/api/codegen.yml
@@ -5,5 +5,6 @@ generates:
       - typescript
       - typescript-resolvers
     config:
-      contextType: any
+      contextType: ../context#MyContext
+      exportContextTypes: true
       useIndexSignature: true
