--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "codegen:watch": "graphql-codegen --config codegen.yml --watch"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.24.2",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
